--- a/POSVTAV2/monitor_ventas_ruta_movil.html
+++ b/POSVTAV2/monitor_ventas_ruta_movil.html
@@ -13,7 +13,7 @@
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
 
   <!-- =====================================================
-       🎨 BLOQUE 2: ESTILOS VISUALES DEL PANEL
+       🎨 BLOQUE 2: ESTILOS VISUALES DEL PANEL + MODAL
        ===================================================== -->
   <style>
     body {
@@ -33,7 +33,7 @@
       text-align: center;
       margin-bottom: 20px;
     }
-    input[type="date"], select, button {
+    input[type="date"], select, button, input[type="password"] {
       padding: 10px 14px;
       border-radius: 8px;
       border: none;
@@ -85,6 +85,33 @@
       font-size: 0.9em;
       margin-top: 20px;
     }
+
+    /* ============================
+       ESTILOS DEL MODAL (CONFIRM PW)
+       ============================ */
+    .modal-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.5);
+      display: none; /* se muestra via JS */
+      align-items: center;
+      justify-content: center;
+      z-index: 1000;
+    }
+    .modal {
+      background: white;
+      padding: 18px;
+      border-radius: 10px;
+      width: 320px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.25);
+      font-family: 'Poppins', sans-serif;
+    }
+    .modal h3 { margin: 0 0 10px 0; font-size: 16px; color: #00416A; }
+    .modal p { margin: 0 0 12px 0; font-size: 13px; color: #333; }
+    .modal .row { display:flex; gap:8px; }
+    .modal input[type="password"] { flex:1; }
+    .modal .small { font-size:12px; color:#666; margin-top:8px; }
+    .hidden { display:none; }
   </style>
 </head>
 
@@ -139,7 +166,28 @@
   </div>
 
   <!-- =====================================================
-       ⚙️ BLOQUE 8: LÓGICA JAVASCRIPT PRINCIPAL
+       🔐 BLOQUE 8: MODAL DE CONTRASEÑA (OCULTO POR DEFECTO)
+       ===================================================== -->
+  <div id="pwOverlay" class="modal-overlay" aria-hidden="true">
+    <div class="modal" role="dialog" aria-modal="true" aria-labelledby="pwTitle">
+      <h3 id="pwTitle">Confirmar eliminación</h3>
+      <p>Ingrese la contraseña para eliminar la venta.</p>
+
+      <div class="row">
+        <input id="pwInput" type="password" placeholder="Contraseña" autocomplete="new-password">
+        <button id="pwSubmit">OK</button>
+      </div>
+
+      <div style="margin-top:10px; display:flex; gap:8px; justify-content:flex-end;">
+        <button id="pwCancel" style="background:#ccc;color:#111;border-radius:8px;padding:6px 10px;">Cancelar</button>
+      </div>
+
+      <div id="pwError" class="small hidden" style="color:#b71c1c;">Contraseña incorrecta</div>
+    </div>
+  </div>
+
+  <!-- =====================================================
+       ⚙️ BLOQUE 9: LÓGICA JAVASCRIPT PRINCIPAL (con petición de contraseña)
        ===================================================== -->
   <script>
     // =====================================================
@@ -157,6 +205,13 @@
     const db = firebase.firestore();
 
     // =====================================================
+    // 🔐 SECCIÓN 1.1: CONTRASEÑA (SIMPLE) - ATENCIÓN A SEGURIDAD
+    // =====================================================
+    // Nota: esta contraseña está en el cliente (JS). Cualquiera que vea el código
+    // puede descubrirla. En producción usar Auth + reglas / Cloud Function.
+    const ADMIN_PASSWORD = "131282"; // <--- tu contraseña "simple"
+
+    // =====================================================
     // 🧠 SECCIÓN 2: REFERENCIAS DEL DOM
     // =====================================================
     const tablaBody = document.querySelector("#tablaVentas tbody");
@@ -164,6 +219,16 @@
     const usuarioSelect = document.getElementById("usuarioFiltro");
     const totalDiv = document.getElementById("totalVentas");
     const btnFiltrar = document.getElementById("btnFiltrar");
+
+    // Modal elements
+    const pwOverlay = document.getElementById("pwOverlay");
+    const pwInput = document.getElementById("pwInput");
+    const pwSubmit = document.getElementById("pwSubmit");
+    const pwCancel = document.getElementById("pwCancel");
+    const pwError = document.getElementById("pwError");
+
+    // Variable para almacenar temporalmente el id a eliminar
+    let pendingDeleteId = null;
 
     // =====================================================
     // 🧾 SECCIÓN 3: OBTENER USUARIOS POR FECHA SELECCIONADA
@@ -174,12 +239,17 @@
       usuarioSelect.disabled = true;
       btnFiltrar.disabled = true;
 
-      if (!fechaSeleccionada) return;
+      if (!fechaSeleccionada) {
+        usuarioSelect.innerHTML = "<option value=''>Seleccione una fecha primero</option>";
+        return;
+      }
 
       // Limpiar tabla y total
       tablaBody.innerHTML = "";
       totalDiv.textContent = "";
 
+      // Traer solo la colección y filtrar localmente por la fecha seleccionada
+      // (Se puede optimizar con queries por rango si la colección es enorme)
       const snapshot = await db.collection("rutas_venta").get();
       const usuariosUnicos = new Set();
 
@@ -198,7 +268,7 @@
         }
       });
 
-      // Mostrar lista de usuarios
+      // Mostrar lista de usuarios (solo los que vendieron esa fecha)
       usuarioSelect.innerHTML = "<option value=''>Seleccione un usuario</option>";
       usuariosUnicos.forEach(usuario => {
         const opt = document.createElement("option");
@@ -235,6 +305,7 @@
       let totalGeneral = 0;
       tablaBody.innerHTML = "";
 
+      // Traemos solo documentos del usuario (optimizable por índices)
       const snapshot = await db.collection("rutas_venta")
         .where("usuarioNombre", "==", usuarioFiltro)
         .get();
@@ -255,12 +326,13 @@
         totalGeneral += total;
 
         const row = document.createElement("tr");
+        // Nota: onclick ahora abre el modal que pide contraseña
         row.innerHTML = `
           <td>${data.cliente || data.nombre || "—"}</td>
           <td>${data.usuarioNombre || data.usuario || "—"}</td>
           <td>$${total.toFixed(2)}</td>
           <td>${fechaStr}</td>
-          <td><button class="btn-delete" onclick="eliminarVenta('${doc.id}')">Eliminar</button></td>
+          <td><button class="btn-delete" onclick="solicitarPwYEliminar('${doc.id}')">Eliminar</button></td>
         `;
         tablaBody.appendChild(row);
       });
@@ -273,22 +345,91 @@
     }
 
     // =====================================================
-    // 🗑️ SECCIÓN 5: FUNCIÓN ELIMINAR VENTA
+    // 🔐 SECCIÓN 5: CONTROL MODAL CONTRASEÑA + ELIMINACIÓN
     // =====================================================
-    async function eliminarVenta(id) {
-      const conf = confirm("¿Seguro que deseas eliminar esta venta?");
-      if (!conf) return;
-      await db.collection("rutas_venta").doc(id).delete();
-      alert("✅ Venta eliminada correctamente");
-      cargarVentas();
+
+    // Mostrar modal y guardar id pendiente
+    function solicitarPwYEliminar(id) {
+      pendingDeleteId = id;
+      pwInput.value = "";
+      pwError.classList.add('hidden');
+      pwOverlay.style.display = 'flex';
+      pwOverlay.setAttribute('aria-hidden','false');
+      pwInput.focus();
+    }
+
+    // Ocultar modal
+    function esconderModal() {
+      pendingDeleteId = null;
+      pwInput.value = "";
+      pwError.classList.add('hidden');
+      pwOverlay.style.display = 'none';
+      pwOverlay.setAttribute('aria-hidden','true');
+    }
+
+    // Evento cancelar
+    pwCancel.addEventListener('click', esconderModal);
+
+    // Evento submit del modal (intentar eliminar)
+    pwSubmit.addEventListener('click', async () => {
+      const pw = pwInput.value || "";
+      if (pw === ADMIN_PASSWORD) {
+        // contraseña correcta -> borrar
+        pwError.classList.add('hidden');
+        const id = pendingDeleteId;
+        esconderModal();
+        if (id) {
+          await eliminarVentaConfirmada(id);
+        }
+      } else {
+        // contraseña incorrecta
+        pwError.classList.remove('hidden');
+        pwError.textContent = "Contraseña incorrecta";
+        pwInput.focus();
+      }
+    });
+
+    // Permitir Enter para enviar
+    pwInput.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter') {
+        e.preventDefault();
+        pwSubmit.click();
+      } else if (e.key === 'Escape') {
+        esconderModal();
+      }
+    });
+
+    // Cerrar modal con Escape desde overlay
+    window.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape' && pwOverlay.style.display === 'flex') {
+        esconderModal();
+      }
+    });
+
+    // =====================================================
+    // 🗑️ SECCIÓN 6: FUNCIÓN QUE BORRA REALMENTE (CONFIRMADA)
+    // =====================================================
+    async function eliminarVentaConfirmada(id) {
+      try {
+        await db.collection("rutas_venta").doc(id).delete();
+        alert("✅ Venta eliminada correctamente");
+        // recargar los resultados actuales (si hay fecha+usuario seleccionados)
+        cargarVentas();
+      } catch (e) {
+        console.error(e);
+        alert("❌ Error al eliminar la venta");
+      }
     }
 
     // =====================================================
-    // ⚡ SECCIÓN 6: INICIALIZACIÓN AUTOMÁTICA
+    // ⚡ SECCIÓN 7: INICIALIZACIÓN AUTOMÁTICA
     // =====================================================
     window.onload = () => {
       tablaBody.innerHTML = "<tr><td colspan='5'>Seleccione una fecha para comenzar</td></tr>";
     };
+
+    // Hacemos disponible la función solicitarPwYEliminar en global para onclick inline
+    window.solicitarPwYEliminar = solicitarPwYEliminar;
   </script>
 </body>
 </html>
