--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
   <div class="apps">
     <!-- ✅ Nueva ruta correcta al POS 3.0 con descuento -->
     <a href="POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html">🚀 POS MÓVIL 3.0 DESCUENTO LIBRE</a>
+ 
+  </div>
+<div class="apps">
+    <a href="REPORTE-CORTE-FACTURA.html">🚀 REPORTES PARA FACTURACION RUTAS</a>
   </div>
 
   
