--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
  
   </div>
 <div class="apps">
-    <a href="REPORTE-CORTE-FACTURA.html">🚀 REPORTES PARA FACTURACION RUTAS</a>
+    <a href="POSVTAV2/REPORTE-CORTE-FACTURA.html">🚀 REPORTES PARA FACTURACION RUTAS</a>
   </div>
 
   
